crates/pg_syntax/tests/snapshots/postgres_regress/join@94.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into x values (4,44);"
---
InsertStmt@0..28
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "x"
  Whitespace@13..14 " "
  SelectStmt@14..26
    Values@14..20 "values"
    Whitespace@20..21 " "
    Ascii40@21..22 "("
    List@22..26
      AConst@22..23
        Iconst@22..23 "4"
      Ascii44@23..24 ","
      AConst@24..26
        Iconst@24..26 "44"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

