crates/pg_syntax/tests/snapshots/postgres_regress/join_hash@132.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from hash_join_batches(\n$$\n  select count(*) from simple r join simple s using (id);\n$$);"
---
SelectStmt@0..98
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..96
    List@14..96
      FuncCall@14..96
        Ident@14..31 "hash_join_batches"
        Ascii40@31..32 "("
        Newline@32..33 "\n"
        AConst@33..96
          Sconst@33..96 "$$\n  select count(*)  ..."
  Ascii41@96..97 ")"
  Ascii59@97..98 ";"

